# OpenSees

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeUserPresets.json  COPYRIGHT  Conf.cmake  ConfWin.cmake  Dockerfile  ETC  Install-IntelFortranWindows.ps1  Makefile  Makefile.def  OpenSeesAWS-RockyLinux9.sh  OpenSeesAWS-Ubuntu22.04.sh  README  README-Windows-METIS5.md  README.md  README_Python_Analysis.md  cantilever_q4.py  cantilever_q4.tcl  conan.txt  conanfile.py  conanfile2.py  earthquake_model.tcl  eq_plot_results.py  eq_print_model.py  git-restore-mtime.py  intel23-ifx-static-msvc.cmake  makeFrontera.sh  makeMac.sh  makeOpenSeesMP_Ubuntu.sh  makeOpenSeesMP_WIN.bat  makeWIN.bat  paraview_visualization.py  plot_results.py
EXAMPLES/: CMakeLists.txt  Makefile  README
EXAMPLES/3D-el-pl-Examples/: Makefile  main_ElasticIsotropic3D.cpp  main_Template3Dep.cpp
EXAMPLES/ComputationalGeomechanicsCourseExamples/: Example01.ops  Example02.ops  Example03.ops  Example04.ops
EXAMPLES/DatastarExamples/: README
EXAMPLES/DeveloperTestScripts/: BWBN.tcl  BiaxialConcrete_matTest.tcl  SteelBRB.tcl  ZeroLengthImpact3D_test.tcl  example_cyclic_time.txt  runAll.tcl
EXAMPLES/EQPath/: DLSD.tcl
EXAMPLES/Example1/: CMakeLists.txt  Makefile  main.cpp
EXAMPLES/ExamplePython/: ARL360.g3  Example1.1.py  Example2.1.py  Example3.1.py  Example3.2.py  Example3.3.py  Example4.1.py  Example5.1.py  Example6.1.py  Example7.1.py  Example8.1.py  MomentCurvature.py  RCsection.py  TripleFrictionPendulumX.py  bending_quad9n.py  example_mpi_paralleltruss_explicit.py  example_variable_analysis.py
EXAMPLES/ExampleScripts/: 27NodeCorrected.ops  8node_upU_fix_u_1element.ops  ARL360.g3  ArcLength01.tcl  ArcLength02.tcl  ConcretePanel.tcl  DRM.tcl  DynamicShell.tcl  DynamicShell2.tcl  Example1.1.tcl  Example2.1.tcl  Example3.1.tcl  Example3.2.tcl  Example3.3.tcl  Example4.1.tcl  Example5.1.tcl  Example6.1.tcl  Example7.1.tcl  Example8.1.tcl  Frame.tcl  HS_constraint.tcl  HS_constraint02.tcl  MomentCurvature.tcl  Quad3d.tcl  RCFrame1.tcl  RCFrame2.tcl  RCFrame3.tcl  RCFrame4.tcl  RCFrame5.tcl  RCFrameDisplay.tcl  RCsection.tcl  RMC01_constP.tcl  Rigid.tcl  RigidFrame3D.tcl  RigidFrame3Ddisplay.tcl  RockingBC_example.tcl  SolidTemplate01.ops  SolidTemplate02.ops  SolidTemplate03.ops  SolidTemplate04.ops  (+37 more)
EXAMPLES/ExamplesForTesting/: 20NodeTest.solid03.ops  20node.ops  20node_upU_fix_U_1element.ops  20node_upU_fix_p_U_1element.ops  20node_upU_fix_u_1element.ops  20node_upU_fix_u_element.ops  27NodeTest.solid03.ops  27node.ops  8node.ops  8node_upU_fix_U_1element.ops  8node_upU_fix_p_U_1element.ops  8node_upU_fix_u_1element.ops  8node_upU_fix_u_element.ops  ARL360.at2  CrossAnisotropicElastic.ops  CrossAnisotropicElastic02.ops  MY0a.ops  MY0b.ops  MY0c.ops  MY1a.ops  MY1b.ops  MY1c.ops  MomentCurvature.ops  Nodes.tcl  PileElements.tcl  PureShearTest_27NodeElement.ops  PyPattern.tcl  PySimple1.tcl  PyTzSimple1GenForTesting.ops  README.NOW  RMC01_constP.ops  SolidTemplate_CC.ops  SolidTemplate_DP.ops  SolidTemplate_MD_Loose.ops  SolidTemplate_MD_Loose_constP.ops  SolidTemplate_vM.ops  Solid_PressureSensitiveE3D.ops  Test.20node_upU_1elementfix.ops  Test.BeamLoad2D.ops  Test.BeamLoad3D.ops  (+39 more)
EXAMPLES/LargeSP/: Example.tcl  pbs1
EXAMPLES/MaterialModels/: ConcreteEPmodelDP.tcl  DenseSandEPmodelDP.tcl  MediumClayEPmodelVM.tcl  MediumDenseSandEPmodelDP.tcl  SoftClayEPmodelCC.tcl  SteelEPmodelVM.tcl  StiffClayEPmodelCC.tcl  StiffClayEPmodelVM.tcl
EXAMPLES/Misc/: Example1.1.tcl  FileIO.tcl
EXAMPLES/OpenSees.NET Examples/: imp readme.txt  important note.txt
EXAMPLES/ParallelModelMP/: METIS_PARTITION_BENCHMARK.md  common.tcl  exampleMP.tcl  exampleSP.tcl  metisPartitionBenchmark.tcl  metisPartitionState.tcl
EXAMPLES/Partition/: Example.tcl
EXAMPLES/PlaneFrame/: CMakeLists.txt  Makefile  main.cpp  quick.in
EXAMPLES/Reliability/: CalRel_manual_1.tcl  CalRel_manual_7.tcl  Class_example_1.tcl  Class_example_2.tcl  DiscretizeMember.tcl  Madsen_eg_5_9.tcl  RV_tester.tcl  bar.tcl  industrialFrame.tcl  portalframe.py  portalframe.tcl  steelFrame.tcl  truss2.py  truss2.tcl  trussParameter.tcl
EXAMPLES/Serialization/: database.cpp
EXAMPLES/ShadowTruss/: ActorTruss.cpp  ClientMain.cpp  Makefile  ShadowActorTruss.h  ShadowTruss.cpp  ShadowTruss.h  run.tcl
EXAMPLES/SmallMP/: Example.tcl  analysis.tcl
EXAMPLES/SmallSP/: Example.tcl  RigidFrame3D.tcl
EXAMPLES/SolverBenchmark/: benchmark_python_sparse.py  benchmark_python_sparse_eigen.py  plot_timing.py
EXAMPLES/TclPlaneTruss/: MyTruss.cpp  MyTruss.h  TclPlaneTruss.cpp  TclPlaneTruss.h  example1.tcl  example2.tcl  myCommands.cpp
EXAMPLES/TeraGridExamples/: Example1.tcl  Example2.tcl  Example3.tcl  README  analysis.tcl  submit1
EXAMPLES/kepler/: ARL360.at2  Example1.xml
EXAMPLES/verification/: AISC25.tcl  CMakeLists.txt  Eigen1.tcl  EigenFrame.Extra.tcl  EigenFrame.tcl  NewmarkIntegrator.tcl  PinchedCylinder.tcl  PlanarShearWall.tcl  PlanarTruss.Extra.tcl  PortalFrame2d.tcl  RatchetTest.tcl  SmallEigen.tcl  Specimen1.acc  Specimen1.tcl  elCentro.at2  runAll.tcl  runVerificationSuite.tcl  sdofTransient.tcl  test-HystereticAsym.tcl  test-HystereticSmooth.tcl
OTHER/: CMakeLists.txt
OTHER/AMD/: CMakeLists.txt  Makefile  UFconfig.h
OTHER/ARPACK/: CMakeLists.txt  Makefile  dgetv0.f  dnaitr.f  dnaup2.f  dnaupd.f  dneupd.f  dsaitr.f  dsaup2.f  dseupd.f  dvout1.f  ivout1.f  second.f  sseupd.f
OTHER/BLAS/: CMakeLists.txt  Makefile  dpotrf.f  dtrtrs.f
OTHER/CBLAS/: CMakeLists.txt  Makefile
OTHER/CSPARSE/: CMakeLists.txt  Makefile
OTHER/ITPACK/: CMakeLists.txt  README.md  dsrc2c.f  dtst2c.f  jcg.f  jsi.f  rscg.f  rssi.f  sor.f  ssorcg.f  ssorsi.f
OTHER/LAPACK/: CMakeLists.txt  Makefile  dlahrd.f  f2c-bridge.h
OTHER/METIS/: CMakeLists.txt  GKlib.c  GKlib.h  Makefile  balpart.c  bucketlist.c  bucketsort.c  ccgraph.c  changes  coarsen.c  compress.c  defs.h  entrypoint.c  estmem.c  (+48 more)
SRC/: CMakeLists.txt  G3Globals.h  Makefile  Makefile.incl  OPS_Globals.h  bool.h  classTags.h  readme  remote.h
(+9753 files in other folders)
